syntax = "proto3";

package engine;

import "const.proto";
import "google/api/annotations.proto";

service CallService {
    // List of call
    rpc SearchHistoryCall(SearchHistoryCallRequest) returns (ListHistoryCall) {
        option (google.api.http) = {
            get: "/calls/history"
        };
    }

    rpc SearchActiveCall(SearchCallRequest) returns (ListCall) {
        option (google.api.http) = {
            get: "/calls/active"
        };
    }
    // Call item
    rpc ReadCall(ReadCallRequest) returns (ActiveCall) {
        option (google.api.http) = {
            get: "/calls/active/{id}"
        };
    }

    // Create e call
    rpc CreateCall (CreateCallRequest) returns (CreateCallResponse) {
        option (google.api.http) = {
            post: "/calls"
            body: "*"
        };
    }

    rpc HangupCall (HangupCallRequest) returns (HangupCallResponse) {
        option (google.api.http) = {
            delete: "/calls/active/{id}"
            body: "*"
        };
    }

    rpc HoldCall (UserCallRequest) returns (HoldCallResponse) {
        option (google.api.http) = {
            patch: "/calls/active/{id}/hold"
            body: "*"
        };
    }

    rpc UnHoldCall (UserCallRequest) returns (HoldCallResponse) {
        option (google.api.http) = {
            patch: "/calls/active/{id}/unhold"
            body: "*"
        };
    }

    rpc DtmfCall (DtmfCallRequest) returns (DtmfCallResponse) {
        option (google.api.http) = {
            patch: "/calls/active/{id}/dtmf"
            body: "*"
        };
    }

    rpc BlindTransferCall (BlindTransferCallRequest) returns (BlindTransferCallResponse) {
        option (google.api.http) = {
            patch: "/calls/active/{id}/transfer"
            body: "*"
        };
    }

    rpc EavesdropCall (EavesdropCallRequest) returns (CreateCallResponse) {
        option (google.api.http) = {
            post: "/calls/active/{id}/eavesdrop"
            body: "*"
        };
    }
}

message SearchHistoryCallRequest {
    int32 page = 1;
    int32 size = 2;

    FilterBetween created_at = 3;
    repeated int64 user_id = 4;
    repeated int64 agent_id = 5;
    repeated int64 queue_id = 6;
    repeated int64 team_id = 7;
    repeated int64 member_id = 8;
    repeated int64 gateway_id = 9;
    string q = 10;

    FilterBetween duration = 11;
    bool skip_parent = 12;
    string parent_id = 13;
    string cause = 14;
    bool has_file = 15;

    repeated string fields = 16;
    string sort = 17;
    int64 domain_id = 18;
    string number = 19;
    string direction = 20;
    FilterBetween answered_at = 21;
    bool missed = 22;
    FilterBetween stored_at = 23;
    repeated string id = 24;
    repeated string transfer_from = 25;
    repeated string transfer_to = 26;
    repeated string dependency_id = 27;
}

message ListHistoryCall {
    bool next = 1;
    repeated HistoryCall items = 2;
}

message CallFile {
    int64 id = 1;
    string name = 2;
    int64 size = 3;
    string mime_type = 4;
}

message HistoryCall {
    string id = 1;
    string app_id = 2;
    string type = 3;
    string parent_id = 4;
    Lookup user = 5;
    string extension = 6;
    Lookup gateway = 7;
    string direction = 8;
    string destination = 9;
    Endpoint from = 10;
    Endpoint to = 11;
    map<string,string> variables = 12;

    int64 created_at = 13;
    int64 answered_at = 14;
    int64 bridged_at = 15;
    int64 hangup_at = 16;
    string hangup_by = 17;
    string cause = 18;

    int32 duration = 19;
    int32 hold_sec = 20;
    int32 wait_sec = 21;
    int32 bill_sec = 22;

    int32 sip_code = 23;
    repeated CallFile files = 24;

    Lookup queue = 25;
    Lookup member = 26;
    Lookup team = 27;
    Lookup agent = 28;

    int64 joined_at = 29;
    int64 leaving_at = 30;
    int64 reporting_at = 31;
    int64 queue_bridged_at = 32;
    int32 queue_wait_sec = 33;
    int32 queue_duration_sec = 34;
    int32 reporting_sec = 35;
    string result = 36;
    repeated string tags = 37;
    string display = 38;
    int64 stored_at = 39;
    string transfer_from = 40;
    string transfer_to = 41;
    bool has_children = 42;
}

message EavesdropCallRequest {
    string id = 1;
    string app_id = 2;

    bool control = 3;
    bool listen_a = 4;
    bool listen_b = 5;
    bool whisper_a = 6;
    bool whisper_b = 7;

    int64 domain_id = 8;
}

message BlindTransferCallRequest {
    string id = 1;
    string app_id = 2;
    string destination = 3;

    int64 domain_id = 4;
}

message BlindTransferCallResponse {

}

message DtmfCallResponse {

}

message DtmfCallRequest {
    string id = 1;
    string app_id = 2;
    string digit = 3;

    int64 domain_id = 4;
}

message UserCallRequest {
    string id = 1;
    string app_id = 2;
    int64 domain_id  = 3;
}

message HoldCallResponse {
    string state = 1;
}

message CreateCallResponse {
    string id = 1;
}


message HangupCallResponse {

}


message HangupCallRequest {
    string id = 1;
    string cause = 2;
    string app_id = 3;
    int64 domain_id = 4;
}


message ReadCallRequest {
    string id = 1;
    int64 domain_id = 2;
}

message SearchCallRequest {
    int32 page = 1;
    int32 size = 2;

    FilterBetween created_at = 3;
    repeated int64 user_id = 4;
    repeated int64 agent_id = 5;
    repeated int64 queue_id = 6;
    repeated int64 team_id = 7;
    repeated int64 member_id = 8;
    repeated int64 gateway_id = 9;
    string q = 10;

    FilterBetween duration = 11;
    bool skip_parent = 12;
    string parent_id = 13;
    string cause = 14;
    bool exists_file = 15;

    repeated string fields = 16;
    string sort = 17;
    int64 domain_id = 18;
    string number = 19;
    string direction = 20;
    FilterBetween answered_at = 21;
    bool missed = 22;
    FilterBetween stored_at = 23;
}

message ActiveCall {
    string id = 1;
    string app_id = 2;
    string state = 3;
    int64 timestamp = 4;
    string type = 5;
    string parent_id = 6;
    Lookup user = 7;
    string extension = 8;
    Lookup gateway = 9;
    string direction = 10;
    string destination = 11;
    Endpoint from = 12;
    Endpoint to = 13;
    map<string,string> variables = 14;

    int64 created_at = 15;
    int64 answered_at = 16;
    int64 bridged_at = 17;

    int32 duration = 21;
    int32 hold_sec = 22;
    int32 wait_sec = 23;
    int32 bill_sec = 24;

    Lookup queue = 25;
    Lookup member = 26;
    Lookup team = 27;
    Lookup agent = 28;

    int64 joined_at = 29;
    int64 leaving_at = 30;
    int64 reporting_at = 31;
    int64 queue_bridged_at = 32;
    int32 queue_wait_sec = 33;
    int32 queue_duration_sec = 34;
    int32 reporting_sec = 35;
    string display = 36;
}

message ListCall {
    bool next = 1;
    repeated ActiveCall items = 2;
}

message CreateCallRequest {
    message CallSettings {
        int32 timeout = 1;
        bool audio = 2;
        bool video = 3;
        bool screen = 4;
        bool record = 5;
        map<string,string> variables = 6;
    }

    message EndpointRequest {
        string app_id = 1;
        string type = 2;
        int64 id = 3;
    }

    EndpointRequest from = 1;
    EndpointRequest to = 2;
    string destination = 3;

    CallSettings params = 4;

    int64 domain_id = 5;
}

message Endpoint {
    string type = 1;
    string number = 2;
    string id = 3;
    string name = 4;
}

message Call {
    string id = 1;
    int64 created_at = 2;
    Lookup created_by = 3;

    int64 timestamp = 4;
    string parent_id = 5;
    string app_id = 6;
    string state = 7;
    string direction = 8;
    Endpoint from = 9;
    Endpoint to = 10;
}